@@ -1,3 +1,9 @@
+2012-05-21  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/53410
+	* gcc.c-torture/compile/pr53410-1.c: New test.
+	* gcc.c-torture/compile/pr53410-2.c: New test.
+
 2012-05-21  Joseph Myers  <joseph@codesourcery.com>
 
 	PR c/53418
