@@ -1,3 +1,10 @@
+2012-05-21  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/53410
+	* fold-const.c (fold_binary_loc): Use build_zero_cst (type)
+	instead of build_int_cst (type, 0) where vector types might be
+	involved.
+
 2012-05-21  Joseph Myers  <joseph@codesourcery.com>
 
 	PR c/53418
